[package]
name = "tfocus"
version = "0.1.5"
edition = "2021"
description = "tfocus is a super interactive tool for selecting and executing Terraform plan/apply on specific resources. Think of it as an emergency tool - not for everyday use."
license = "MIT"
repository = "https://github.com/nwiizo/tfocus"
documentation = "https://github.com/nwiizo/tfocus"
homepage = "https://github.com/nwiizo/tfocus"
authors = ["syu.m.5151@gmail.com"]
keywords = ["terraform", "opentofu", "cli", "workspace"]
categories = ["command-line-utilities"]
rust-version = "1.78.0"


[dependencies]
walkdir = "2.5"
regex = "1.11"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
colored = "2.2"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
crossterm = "0.28"
fuzzy-matcher = "0.3"
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_System_Threading", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3.15"
assert_fs = "1.1"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
